--- a/scss/component.scss
+++ b/scss/component.scss
@@ -74,3 +74,12 @@
     }
   }
 }
+
+// kakao map
+.map-info-window {
+  width: 150px;
+  text-align: center;
+  padding: 6px 0;
+  background-color: pink;
+  border: 1px solid lime;
+}
